using System;
using System.Collections.Generic;
using Godot;

class EcologyGauge : Gauge{
  public EcologyGauge() : base(){}
}
