using System;
using System.Collections.Generic;
using Godot;

class EconomyGauge : Gauge{
  public EconomyGauge() : base(){}
}
