using System;

interface IGaugeObserver
{
  public void update(double xval);
}
