using System;
using System.Collections.Generic;
using Godot;

class SociabilityGauge : Gauge{
  public SociabilityGauge() : base(){}
}
