using Godot;
using System;

public enum CellKind 
{
    BUILDING, 
    WASTELAND, // free cell 
    PRIMARY // nothing, basic 
	
}
